TODO fix wrap for listing columns

--- a/src/components/filter/styles.module.css
+++ b/src/components/filter/styles.module.css
@@ -1,9 +1,35 @@
+.container {
+  margin: 0 auto;
+  padding: 15px;
+  max-width: 30vw;
+  flex-wrap: nowrap;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  
+}
 .form {
-  background-color: #f7f8f9;
-  border-radius: 0.2rem;
-  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
-.container {
-  padding: 0;
+.form > p {
+  display: flex;
+  flex-direction: column;
+
+}
+
+.filters {
+  display: flex;
+  margin: 25px 0px;
+  padding: 0px 15px;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  align-content: center;
+  
+
 }
