--- a/src/components/hero/styles.module.css
+++ b/src/components/hero/styles.module.css
@@ -1,10 +1,36 @@
 .hero {
   background-image: url('../../images/hero.jpg');
   background-repeat: no-repeat;
+  background-position: center;
   background-attachment: scroll;
   background-size: cover;
+  height: 60vh;
+
   color: white;
+  margin: 0px;
+  position:relative;
+  padding: 15px;
+  z-index: 20;
+
 }
+
+.hero-overlay {
+  backgound: rgba(75, 75, 75, 0.6);
+  position: relative;
+  background-blend-mode: brightness(0.5);
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+}
+
+.hero-body {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-between;
+  line-height: 0.5;
+}
+
 .logo {
   background-image: url('../../images/GloboLogo.png');
 }
