--- a/src/components/listing/styles.module.css
+++ b/src/components/listing/styles.module.css
@@ -1,7 +1,22 @@
 .column {
   margin: 1rem 0;
+  flex-wrap: wrap;
+  max-width: 30vw;
+}
+.row {
+  width: 30vw;
 }
 
 .card {
   box-shadow: 0 0.25rem 1rem rgba(48, 55, 66, 0.15);
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  width: 100vw;
+}
+
+.img-responsive {
+  display: flex;
+  width: 100%;
 }
